--- a/ui/coco_edit.ui
+++ b/ui/coco_edit.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Coco Edit by @cocoyosoy</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icons/logo.png</normaloff>icons/logo.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
@@ -114,8 +118,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>1193</width>
-           <height>65</height>
+           <width>1258</width>
+           <height>84</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout">
