--- a/ui/tangle.ui
+++ b/ui/tangle.ui
@@ -34,26 +34,6 @@
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <widget class="QWidget" name="horizontalLayoutWidget">
-        <layout class="QGridLayout" name="gridLayout_3">
-         <item row="0" column="0">
-          <widget class="QLabel" name="lbl_pixmap">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>TextLabel</string>
-           </property>
-           <property name="scaledContents">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
        <widget class="QTreeWidget" name="tree_nodes">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
@@ -119,7 +99,7 @@
            <x>0</x>
            <y>0</y>
            <width>1258</width>
-           <height>75</height>
+           <height>84</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout">
@@ -168,7 +148,13 @@
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="action_show_images"/>
+    <widget class="QMenu" name="menuViewers">
+     <property name="title">
+      <string>Viewers</string>
+     </property>
+     <addaction name="action_show_image_viewer"/>
+    </widget>
+    <addaction name="menuViewers"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -190,9 +176,9 @@
     <string>Reload Nodes</string>
    </property>
   </action>
-  <action name="action_show_images">
+  <action name="action_show_image_viewer">
    <property name="text">
-    <string>Show Images</string>
+    <string>Image</string>
    </property>
   </action>
  </widget>
