--- a/ui/tangle.ui
+++ b/ui/tangle.ui
@@ -94,6 +94,7 @@
     <addaction name="actionSettings"/>
     <addaction name="separator"/>
     <addaction name="action_reload_nodes"/>
+    <addaction name="action_generate_node_database"/>
     <addaction name="separator"/>
     <addaction name="action_about"/>
    </widget>
@@ -157,7 +158,7 @@
   </action>
   <action name="action_reload_nodes">
    <property name="text">
-    <string>Reload Nodes</string>
+    <string>Reload Node Browser</string>
    </property>
   </action>
   <action name="action_show_image_viewer">
@@ -305,6 +306,11 @@
    </property>
    <property name="shortcutContext">
     <enum>Qt::ApplicationShortcut</enum>
+   </property>
+  </action>
+  <action name="action_generate_node_database">
+   <property name="text">
+    <string>Generate Node Database</string>
    </property>
   </action>
  </widget>
