--- a/ui/tangle.ui
+++ b/ui/tangle.ui
@@ -24,9 +24,6 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <widget class="QSplitter" name="horizontal_splitter">
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -49,8 +46,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>1170</width>
-           <height>784</height>
+           <width>446</width>
+           <height>136</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout">
@@ -66,6 +63,19 @@
           </item>
          </layout>
         </widget>
+       </widget>
+       <widget class="QWidget" name="layoutWidget_2">
+        <layout class="QVBoxLayout" name="log_layout">
+         <item>
+          <widget class="QTreeWidget" name="tree_log">
+           <column>
+            <property name="text">
+             <string>Log</string>
+            </property>
+           </column>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </widget>
      </widget>
@@ -85,18 +95,18 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionExit"/>
+    <addaction name="action_show_about"/>
+    <addaction name="action_exit"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionSettings"/>
+    <addaction name="action_settings"/>
     <addaction name="separator"/>
     <addaction name="action_reload_nodes"/>
     <addaction name="action_generate_node_database"/>
     <addaction name="separator"/>
-    <addaction name="action_about"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -146,12 +156,12 @@
    <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionExit">
+  <action name="action_exit">
    <property name="text">
     <string>Exit</string>
    </property>
   </action>
-  <action name="actionSettings">
+  <action name="action_settings">
    <property name="text">
     <string>Settings</string>
    </property>
@@ -311,6 +321,11 @@
   <action name="action_generate_node_database">
    <property name="text">
     <string>Generate Node Database</string>
+   </property>
+  </action>
+  <action name="action_show_about">
+   <property name="text">
+    <string>About...</string>
    </property>
   </action>
  </widget>
